--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -3,17 +3,33 @@ kind: ConfigMap
 metadata:
   name: fraud-detection-config
   namespace: fraud-detection
+  labels:
+    app: fraud-detection
 data:
   APP_ENV: "production"
   LOG_LEVEL: "INFO"
   PREDICTION_THRESHOLD: "0.28"
+  PYTHONUNBUFFERED: "1"
+  # Redis configuration
+  REDIS_URL: "redis://redis:6379"
+  # Rate limiting
+  RATE_LIMIT_PER_MINUTE: "60"
+  RATE_LIMIT_PER_HOUR: "1000"
+  # MLflow (if using external tracking server)
+  MLFLOW_TRACKING_URI: ""
+  # Feature store TTL
+  FEATURE_STORE_TTL: "3600"
 ---
 apiVersion: v1
 kind: Secret
 metadata:
   name: fraud-detection-secrets
   namespace: fraud-detection
+  labels:
+    app: fraud-detection
 type: Opaque
 stringData:
-  # Add any secrets here (API keys, etc.)
+  # Generate with: python -c "from fraud_detection.api.auth import generate_api_key; print(generate_api_key())"
   API_KEY: "change-me-in-production"
+  # Multiple keys comma-separated
+  API_KEYS: ""
