--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ joblib>=1.3.0
 fastapi>=0.104.0
 uvicorn>=0.24.0
 pydantic>=2.5.0
+streamlit>=1.31.0
 
 # Data Validation
 great-expectations>=0.18.0
